<resources>
    <string name="app_name">Vibe智购AI</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="title_home">首页</string>
    <string name="title_snack">商品</string>
    <string name="title_place">购物车</string>
    <string name="title_my">我的</string>
    <string name="snack_add_btn">+</string>
    <string name="place_money_label">合计: </string>
    <string name="place_order_btn">下单</string>
    <string name="place_less_label">-</string>
    <string name="place_add_label">+</string>
    <string name="place_order_count_init">1</string>
    <string name="footer_label">没有更多了</string>
    <string name="login_username_edit">请输入账号</string>
    <string name="login_password_edit">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="cart_empty_label">购物车是空的</string>
    <string name="order_empty_label">还没有下单</string>
    <string name="remarks_edit">请输入备注</string>
</resources>
